--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,51 +11,74 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="150dp">
 
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="35dp"
+                    android:paddingLeft="5dp"
+                    android:src="@drawable/email" />
 
+                <EditText
+                    android:id="@+id/emailID"
+                    android:layout_width="320dp"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/editText2"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="23dp"
+                    android:ems="10"
+                    android:hint="Enter Email"
+                    android:inputType="textPersonName"
+                    android:textColor="@color/colorAccent"
+                    android:textColorHint="#FFF" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="240dp"
+                android:id="@+id/linearLayout">
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/loginpwd"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginTop="10dp"
+                    android:paddingLeft="5dp"/>
 
-    <EditText
-        android:id="@+id/emailID"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/editText2"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp"
-        android:ems="10"
-        android:hint="Enter Email"
-        android:inputType="textPersonName"
-        android:textColorHint="#FFF"
-        android:drawableLeft="@drawable/loginemail" />
+                <EditText
+                    android:id="@+id/editText2"
+                    android:layout_width="320dp"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/button"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginBottom="33dp"
+                    android:ems="10"
+                    android:hint="Enter Password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="5dp"
+                    android:textColor="@color/colorAccent"
+                    android:textColorHint="#FFF" />
+            </LinearLayout>
 
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="33dp"
-        android:ems="10"
-        android:hint="Enter Password"
-        android:inputType="textPassword"
-        android:textColorHint="#FFF"
-        android:drawableLeft="@drawable/loginpwd"/>
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView9"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="43dp"
-        android:background="@drawable/loginbuttongradient"
-        android:text="Login"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        />
+            <Button
+                android:id="@+id/button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/linearLayout"
+                android:background="@drawable/loginbuttongradient"
+                android:text="Login"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView"
@@ -65,7 +88,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="54dp"
         android:textStyle="bold"
-        android:text="New usergggffg? Click Here to register"
+        android:text="New user? Click Here to register"
         android:textColor="#FFF"
         android:textSize="15dp"/>
 
@@ -93,21 +116,22 @@
         android:textColor="#FFF"
         android:textStyle="bold"/>
 
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+            <ProgressBar
+                android:id="@+id/progressBar1"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/button4"
+                android:layout_centerHorizontal="true"
+                android:visibility="gone"/>
 
             <ImageView
                 android:id="@+id/imageView3"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:layout_above="@+id/emailID"
+                android:layout_below="@+id/progressBar1"
                 android:layout_centerHorizontal="true"
-                android:layout_marginBottom="36dp"
+                android:layout_marginTop="71dp"
                 android:background="@drawable/roundu" />
         </RelativeLayout>
 </RelativeLayout>
