--- a/app/src/main/res/layout/activity_num10.xml
+++ b/app/src/main/res/layout/activity_num10.xml
@@ -182,6 +182,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/textView12"
                         android:layout_centerHorizontal="true"
+                        android:layout_marginTop="12dp"
                         android:background="@drawable/buttonstylegradient"
                         android:padding="10dp"
                         android:text="Click Here for Details"
@@ -192,9 +193,9 @@
                         android:id="@+id/textView11"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentEnd="true"
-                        android:layout_alignParentRight="true"
                         android:layout_below="@+id/textView13"
+                        android:layout_toEndOf="@+id/relativeLayout5"
+                        android:layout_toRightOf="@+id/relativeLayout5"
                         android:drawableLeft="@drawable/email13"
                         android:padding="10dp"
                         android:text="Email:sasi2k@yahoo.com"
@@ -206,9 +207,11 @@
                         android:id="@+id/textView12"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignLeft="@+id/textView11"
-                        android:layout_alignStart="@+id/textView11"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
                         android:layout_below="@+id/textView11"
+                        android:layout_marginEnd="27dp"
+                        android:layout_marginRight="27dp"
                         android:drawableLeft="@drawable/phone"
                         android:padding="10dp"
                         android:text="Contact Number:9500022999"
@@ -230,11 +233,10 @@
                     <TextView
                         android:id="@+id/textView13"
                         android:layout_width="300dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignLeft="@+id/textView11"
-                        android:layout_alignStart="@+id/textView11"
+                        android:layout_height="100dp"
+                        android:layout_alignEnd="@+id/button10"
+                        android:layout_alignRight="@+id/button10"
                         android:layout_below="@+id/relativeLayout5"
-                        android:layout_marginTop="14dp"
                         android:drawableLeft="@drawable/address"
                         android:padding="10dp"
                         android:text="Local Address:51A/68, Palani Road West, Thoothukudi-628 008"
@@ -248,7 +250,6 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/relativeLayout6"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginTop="76dp"
                         android:text="Sasikala Pushpa"
                         android:textColor="#135589"
                         android:textSize="19sp"
