--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -18,7 +18,7 @@
         android:ems="10"
         android:hint="UserName"
         android:inputType="textPersonName"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorPrimary"
         android:drawableLeft="@drawable/us"/>
 
     <EditText
@@ -62,15 +62,27 @@
         android:drawableLeft="@drawable/conn"
         android:textColor="@color/colorAccent"/>
 
+    <Spinner
+        android:id="@+id/spinner1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/editText6"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
+        android:backgroundTint="#FFFF"/>
+
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText6"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/spinner1"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="13dp"
         android:background="@color/cardview_light_background"
         android:text="Register"
         android:textColor="@color/colorAccent" />
