--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jason.sagy.notifications">
+    android:orientation="vertical"
+    tools:context="com.example.jason.sagy.Notifications">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="My list should appear below this" />
+
+    <ListView
+    android:id="@+id/lvNotificationList"
+    android:layout_width="match_parent"
+    android:layout_height="265dp" />
+
+
+
+</LinearLayout>
