--- a/app/src/main/res/layout/activity_another.xml
+++ b/app/src/main/res/layout/activity_another.xml
@@ -11,103 +11,108 @@
         android:id="@+id/appbar"
         android:layout_height="270dp"
         android:layout_width="match_parent">
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            app:layout_scrollFlags="exitUntilCollapsed|scroll"
-            app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
+            android:layout_height="match_parent"
             android:background="#FF1943"
-            >
+            app:contentScrim="?attr/colorPrimary"
+            app:expandedTitleMarginEnd="64dp"
+            app:expandedTitleMarginStart="48dp"
+            app:layout_scrollFlags="exitUntilCollapsed|scroll">
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"></android.support.v7.widget.Toolbar>
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"></android.support.v7.widget.Toolbar>
 
             <TextView
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="40dp"
                 android:id="@+id/textView14"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:textColor="#FFF"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="40dp"
                 android:text="Pothiramangalam"
-                android:textSize="21sp"/>
+                android:textColor="#FFF"
+                android:textSize="21sp"
+                android:textStyle="bold" />
 
             <RelativeLayout
-                android:orientation="vertical"
-                android:layout_marginLeft="40dp"
-                android:layout_marginTop="110dp"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@drawable/circlebackground">
+                android:layout_marginLeft="40dp"
+                android:layout_marginTop="110dp"
+                android:background="@drawable/circlebackground"
+                android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/moredetails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/moredetails"
-                    android:id="@+id/moredetails"/>
+                    android:background="@drawable/moredetails" />
 
 
             </RelativeLayout>
+
             <RelativeLayout
-                android:layout_marginLeft="32dp"
-                android:layout_marginTop="180dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="180dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="More Details"
                     android:textColor="#fff"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </RelativeLayout>
+
             <RelativeLayout
-                android:orientation="vertical"
-                android:layout_marginLeft="290dp"
-                android:layout_marginTop="110dp"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                android:background="@drawable/circlebackground">
+                android:layout_marginLeft="290dp"
+                android:layout_marginTop="110dp"
+                android:background="@drawable/circlebackground"
+                android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/mpdetails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_horizontal"
-                    android:background="@drawable/mpnga"
-                    android:id="@+id/mpdetails"/>
+                    android:background="@drawable/mpnga" />
 
 
             </RelativeLayout>
+
             <RelativeLayout
-                android:layout_marginLeft="280dp"
-                android:layout_marginTop="180dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="280dp"
+                android:layout_marginTop="180dp">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="MP Details"
                     android:textColor="#fff"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
             </RelativeLayout>
 
             <ImageButton
                 android:id="@+id/imageButton"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@drawable/back12"
-                />
+                android:background="@drawable/back12" />
 
 
         </android.support.design.widget.CollapsingToolbarLayout>
