--- a/app/src/main/res/layout/activity_grid.xml
+++ b/app/src/main/res/layout/activity_grid.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jason.sagy.Grid"
-    android:background="#fcfcfc">
+    android:background="@color/green">
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_height="270dp"
