--- a/app/src/main/res/layout/activity_num13.xml
+++ b/app/src/main/res/layout/activity_num13.xml
@@ -24,7 +24,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:background="@drawable/gradientbackground">
+                android:background="@color/starblue">
 
                 <ImageView
                     android:id="@+id/imageView6"
