--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -5,7 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.jason.sagy.Registration"
-    android:background="@drawable/loginbac">
+    android:background="@color/starblue">
+
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_above="@+id/editText3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="19dp"
+        android:src="@drawable/roundu" />
 
     <EditText
         android:id="@+id/editText3"
@@ -33,7 +41,7 @@
         android:hint="E-Mail ID"
         android:inputType="textPersonName"
         android:drawableLeft="@drawable/emaili"
-        android:textColor="@color/colorAccent"/>
+       />
 
     <EditText
         android:id="@+id/editText5"
@@ -46,7 +54,7 @@
         android:hint="Password"
         android:inputType="textPassword"
         android:drawableLeft="@drawable/paswod"
-        android:textColor="@color/colorAccent"/>
+        />
 
     <EditText
         android:id="@+id/editText6"
@@ -60,7 +68,7 @@
         android:hint="Confirm Password"
         android:inputType="textPassword"
         android:drawableLeft="@drawable/conn"
-        android:textColor="@color/colorAccent"/>
+       />
 
     <Spinner
         android:id="@+id/spinner1"
@@ -70,8 +78,7 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/editText6"
         android:background="@android:drawable/btn_dropdown"
-        android:spinnerMode="dropdown"
-        android:backgroundTint="#FFFF"/>
+        android:spinnerMode="dropdown" />
 
     <Button
         android:id="@+id/button2"
@@ -83,9 +90,10 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_marginTop="13dp"
-        android:background="@color/cardview_light_background"
+        android:background="@color/btnbac"
         android:text="Register"
-        android:textColor="@color/colorAccent" />
+        android:textColor="@color/background"
+       />
 
     <TextView
         android:id="@+id/textView2"
