--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -1,22 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.jason.sagy.Notifications">
 
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="My list should appear below this" />
 
     <ListView
-    android:id="@+id/lvNotificationList"
-    android:layout_width="match_parent"
-    android:layout_height="265dp" />
-
+        android:id="@+id/notification_listView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="8dp"/>
 
 
 </LinearLayout>
