--- a/app/src/main/res/layout/activity_another.xml
+++ b/app/src/main/res/layout/activity_another.xml
@@ -103,6 +103,11 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginStart="13dp"
                     android:text="MP Details"
                     android:textColor="#fff"
                     android:textStyle="bold" />
@@ -164,14 +169,14 @@
                             android:textSize="19dp"
                             android:textStyle="bold"
                             />
+
                         <TextView
-                            android:paddingLeft="30dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:paddingLeft="30dp"
                             android:text="Pothiramangalam"
                             android:textSize="18.8dp"
-                            android:textStyle="bold"
-                            />
+                            android:textStyle="bold" />
 
 
 
