--- a/app/src/main/res/layout/gallery_thumbnail.xml
+++ b/app/src/main/res/layout/gallery_thumbnail.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
+
 
     <ImageView
         android:id="@+id/thumbnail"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:adjustViewBounds="true"
-        android:scaleType="centerCrop" />
+        android:layout_height="150dp"
+        android:adjustViewBounds="true" />
 </android.support.design.widget.CoordinatorLayout>
