--- a/app/src/main/res/layout/layout2.xml
+++ b/app/src/main/res/layout/layout2.xml
@@ -1,33 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="1dp">
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="90dp"
-            android:layout_height="100dp"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true" />
+    <ImageView
+        android:id="@+id/imageView12"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:src="@mipmap/ic_launcher" />
 
-        <TextView
-            android:id="@+id/tvm"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginLeft="82dp"
-            android:layout_marginStart="82dp"
-            android:layout_marginTop="24dp"
-            android:layout_toEndOf="@+id/imageView12"
-            android:layout_toRightOf="@+id/imageView12"
-            android:text="TextView"
-            android:textStyle="bold" />
-
-
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/tvm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="8dp"
+        android:text="TextView"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
